Day_18/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: nginx-service-back
            port:
              number: 80
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: nginx-service-testing
            port:
              number: 80
